Agregue icono plus

--- a/users.html
+++ b/users.html
@@ -301,7 +301,7 @@
 
                 <div class="slot-content">
                     <div class="actions-section mb-4 df-center-end">
-                        <a href="new-user.html" class="btn btn-primary-mica"> Nuevo usuario</a>
+                        <a href="new-user.html" class="btn btn-primary-mica df-center gap-2"><span class="stash--plus"></span> Nuevo usuario</a>
                     </div>
 
                     <div class='card'>
